fixed small issue with pagination

--- a/src/app/edit/edit.tpl.html
+++ b/src/app/edit/edit.tpl.html
@@ -60,13 +60,12 @@
           </li>
         </ul>
       </div>
-    </div>
     <!-- // sp_resources -->
 
     <!-- sp_paging -->
     <div class="sp_paging">
       <pagination
-        total-items="resources.length"
+        total-items="totalItems"
         page="currentPage"
         max-size="maxSize"
         class="pagination-sm"
