--- a/src/less/main.less
+++ b/src/less/main.less
@@ -37,6 +37,14 @@ a {
   text-decoration: none !important;
 }
 
+button.btn:focus,button.btn:active {
+  //box-shadow: none !important;
+}
+
+input:focus,.form-control:focus {
+  box-shadow: none;
+}
+
 /* Header */
 .sp_fixedheader {
   border-bottom: 1px solid rgba(0,0,0,0.3);
@@ -206,13 +214,16 @@ body.play { //remove?
   margin: 50px 0;
 }
 
-div.container { /*notifications*/
+/* Notifications */
+div.container {
   position: relative;
-  top: 20px;
-}
+  margin: 10px auto 0 auto;
+  width:940px;
+  padding: 0;
 
-div.container div.alert button.close{ /*notifications*/
-  margin-top: 4px;
+  button.close{
+    margin-top: -3px;
+  }
 }
 
 /* Add resource modal */
@@ -246,10 +257,6 @@ button.close:focus {
 
 .opacity_down {
   opacity: 0.7;
-}
-
-.form-control:focus {
-  box-shadow: none;
 }
 
 .inline {
