--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -143,7 +143,7 @@ div.sp_paging {
   border-bottom: 1px solid #ddd;
   border-top: 1px solid #ddd;
   display: block;
-  padding: 10px;
+  padding: 10px 10px 10px 0;
   margin-bottom: -1px;
   cursor: move;
 
@@ -189,18 +189,23 @@ div.sp_paging {
 	color: #D84FA7;
 }
 
-/**
- * Handle positioning
- */
+/* Resource */
 
+ .dndLists .resource {
+   min-height: 40px;
+   overflow: auto;
+   position: relative;
+ }
 
 .dndLists .handle {
   opacity: 0;
-  position: relative;
-  top: 14px;
-  margin-right: 8px;
-  float: left;
-  clear: left;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 6px;
+  height: 14px;
+  margin-left: 2px;
 }
 
 .dndLists .thumb {
@@ -209,25 +214,12 @@ div.sp_paging {
 
 .dndLists .thumb img {
   height: 40px;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  margin-left: 16px;
 }
 
 .dndLists .name {
-  top:0;
-  left:0;
-  right:0;
-  margin-left: 20px;
+  margin-left: 10px;
   float: left;
   width: 220px;
-  overflow: auto;
-}
-
-.dndLists .resource {
-  min-height: 40px;
   overflow: auto;
 }
