--- a/src/less/main.less
+++ b/src/less/main.less
@@ -163,10 +163,15 @@ input[type=range]::-webkit-slider-thumb {
   border: 1px solid #ddd;
   border-radius: 4px;
   margin: 5px 0;
+
+  .palette_wrapper {
+    padding-left: 16px;
+  }
 }
 .palette_item div.media-body label.checkbox{
   margin-bottom: 10px;
 }
+
 
 div.loop {
   margin: 0;
