temporarily hide sound preview button

--- a/src/app/edit/addEditResource.tpl.html
+++ b/src/app/edit/addEditResource.tpl.html
@@ -20,9 +20,10 @@
               </div>
             </div>
             <div ng-switch-when="sound">
-              <button class="btn btn-default btn-sm" ng-click="toggleSound(resource)">
+              <!-- temporarily disabled -->
+              <!--button class="btn btn-default btn-sm" ng-click="toggleSound(resource)">
                 <span class="glyphicon glyphicon-{{playMsg}}"></span>
-              </button>
+              </button-->
             </div>
           </div>
         </div>
