--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -223,3 +223,17 @@ div.sp_paging {
   width: 220px;
   overflow: auto;
 }
+
+.accordionitem {
+    border: 0px;
+    background-color: inherit;
+}
+
+.accordionitem > .panel-heading {
+    color: #333333;
+    background-color: inherit;
+}
+
+.accordionitem > .panel-heading:hover {
+    background-color: #f5f5f5;
+}
