--- a/src/less/main.less
+++ b/src/less/main.less
@@ -14,14 +14,14 @@
 
 @font-face {
   font-family: 'Pacifico';
-  src: url('fonts/pacifico/Pacifico.ttf');
+  src: url('../assets/fonts/pacifico/Pacifico.ttf');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'SourceSansPro';
-  src: url('fonts/source/SourceSansPro-Regular-webfont.eot?') format('eot'), url('fonts/source/SourceSansPro-Regular-webfont.woff') format('woff'), url('fonts/source/SourceSansPro-Regular-webfont.ttf') format('truetype'), url('fonts/source/SourceSansPro-Regular-webfont.svg') format('svg');
+  src: url('../assets/fonts/source/SourceSansPro-Regular-webfont.eot') format('eot'), url('../assets/fonts/source/SourceSansPro-Regular-webfont.woff') format('woff'), url('../assets/fonts/source/SourceSansPro-Regular-webfont.ttf') format('truetype'), url('../assets/fonts/source/SourceSansPro-Regular-webfont.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -187,7 +187,6 @@ input[type=file] {
 
 div.sp_frontbody { //remove?
   color:white;
-  background:#003366 url(../img/frontpage_illustration.png) 50% 60px no-repeat;
 }
 
 .fullscreenImage { //remove?
