--- a/src/less/main.less
+++ b/src/less/main.less
@@ -14,14 +14,14 @@
 
 @font-face {
   font-family: 'Pacifico';
-  src: url('/assets/fonts/pacifico/Pacifico.ttf');
+  src: url('/fonts/Pacifico.ttf');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'SourceSansPro';
-  src: url('/assets/fonts/source/SourceSansPro-Regular-webfont.eot') format('eot'), url('/assets/fonts/source/SourceSansPro-Regular-webfont.woff') format('woff'), url('/assets/fonts/source/SourceSansPro-Regular-webfont.ttf') format('truetype'), url('/assets/fonts/source/SourceSansPro-Regular-webfont.svg') format('svg');
+  src: url('/fonts/SourceSansPro-Regular-webfont.eot') format('eot'), url('/fonts/SourceSansPro-Regular-webfont.woff') format('woff'), url('/fonts/SourceSansPro-Regular-webfont.ttf') format('truetype'), url('/fonts/SourceSansPro-Regular-webfont.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
