--- a/src/less/main.less
+++ b/src/less/main.less
@@ -21,7 +21,7 @@
 
 @font-face {
   font-family: 'SourceSansPro';
-  src: url('@{icon-font-path}Source/SourceSansPro-Regular-webfont.eot') format('eot'), url('@{icon-font-path}Source/SourceSansPro-Regular-webfont.woff') format('woff'), url('@{icon-font-path}Source/SourceSansPro-Regular-webfont.ttf') format('truetype'), url('@{icon-font-path}Source/fonts/SourceSansPro-Regular-webfont.svg') format('svg');
+  src: url('@{font-path}Source/SourceSansPro-Regular-webfont.eot') format('eot'), url('@{font-path}Source/SourceSansPro-Regular-webfont.woff') format('woff'), url('@{font-path}Source/SourceSansPro-Regular-webfont.ttf') format('truetype'), url('@{font-path}Source/fonts/SourceSansPro-Regular-webfont.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
