changed font path

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -14,7 +14,7 @@
 
 @font-face {
   font-family: 'Pacifico';
-  src: url('@{icon-font-path}Pacifico.ttf');
+  src: url('@{font-path}Pacifico/Pacifico.ttf');
   font-weight: normal;
   font-style: normal;
 }
