modified fonts path

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -14,14 +14,14 @@
 
 @font-face {
   font-family: 'Pacifico';
-  src: url('@{font-path}Pacifico/Pacifico.ttf');
+  src: url('@{font-path}pacifico/Pacifico.ttf');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'SourceSansPro';
-  src: url('@{font-path}Source/SourceSansPro-Regular-webfont.eot') format('eot'), url('@{font-path}Source/SourceSansPro-Regular-webfont.woff') format('woff'), url('@{font-path}Source/SourceSansPro-Regular-webfont.ttf') format('truetype'), url('@{font-path}Source/fonts/SourceSansPro-Regular-webfont.svg') format('svg');
+  src: url('@{font-path}source/SourceSansPro-Regular-webfont.eot') format('eot'), url('@{font-path}Source/surceSansPro-Regular-webfont.woff') format('woff'), url('@{font-path}source/SourceSansPro-Regular-webfont.ttf') format('truetype'), url('@{font-path}source/fonts/SourceSansPro-Regular-webfont.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
