changed width of td

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -61,6 +61,10 @@ input:focus,.form-control:focus {
   cursor: pointer;
 }
 
+.sp_actions {
+    padding-right: 20px;
+}
+
 a.sp_storypalette_home {
   font-family: Pacifico, Georgia, "Times New Roman", Times, serif;
   font-size: 20px;
@@ -86,7 +90,7 @@ table.sp_table {
 }
 
 table.sp_table td.sp_title {
-  width: 360px;
+  width: 380px;
 }
 
 table.sp_table tr td {
