--- a/src/less/main.less
+++ b/src/less/main.less
@@ -62,7 +62,7 @@ input:focus,.form-control:focus {
 }
 
 .sp_actions {
-    padding-right: 20px;
+    float: left;
 }
 
 a.sp_storypalette_home {
@@ -90,7 +90,7 @@ table.sp_table {
 }
 
 table.sp_table td.sp_title {
-  width: 380px;
+  width: 400px;
 }
 
 table.sp_table tr td {
