--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -23,7 +23,8 @@ div.sp_fixedcontainer {
 
 div.sp_scrollport {
   position:absolute;
-  top:100px;
+  //top:87px;
+  top: 100px;
   left:0;
   right:0;
   bottom:70px;
@@ -157,6 +158,10 @@ div.sp_paging {
 
   img {
     pointer-events: none;
+  }
+
+  &:first-child {
+    border-top: 0px;
   }
 }
 
